--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,6 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(libs/eigen)
 include_directories(.)
 
+set(CMAKE_EXE_LINKER_FLAGS "-static")
+
 add_executable(CrossField main.cc cross_field.cc linear_solver.cc)
